overlap tab header resolved

--- a/assets/sass/_navhead.scss
+++ b/assets/sass/_navhead.scss
@@ -197,7 +197,8 @@ header {
         position: fixed;
         top: 0;
         right: 0;
-        width: 70%;
+        width: 73vw;
+        padding-left: 30px;
 
 
     }
