--- a/css/main.css
+++ b/css/main.css
@@ -291,7 +291,8 @@ header {
     position: fixed;
     top: 0;
     right: 0;
-    width: 70%;
+    width: 73vw;
+    padding-left: 30px;
   }
 }
 @media only screen and (max-width: 600px) {
